# SIEDD

./: .gitignore  LICENSE  README.md  data.xlsx  download_BUNNY.sh  download_DAVIS.sh  download_MarioKart.sh  download_UVG_4k.sh  download_UVG_hd.sh  genplots.py  index.html  pyproject.toml  runpod_launch.sh  runpod_startup.sh  slurm_template.sh
src/SIEDD/: configs.py  decode.py  decode_frames.py  denoising_baseline.py  exp.py  extra_metrics.py  main.py  multigpu.py  quant_exp.py  quant_test.py  runpod_exp.py  strainer.py  superres.py  trainer.py
src/SIEDD/data_processing/: __init__.py  data_process.py  dataset.py  transform.py
src/SIEDD/layers/: __init__.py  activations.py  batch.py  batch_quant.py  mlp.py  nerv_block.py  positional_encoders.py
src/SIEDD/models/: __init__.py  base_model.py  cuda_mlp.py  generic_mlp.py  incode.py  mlp_block.py  siren_nerv.py  strainer.py
src/SIEDD/utils/: __init__.py  coord_sampler.py  coord_utils.py  helpers.py  layer_utils.py  lmc.py  losses.py  metric.py  optim.py  quantize.py  state_tools.py  tinycudann.py
static/css/: index.css
static/js/: fig2a.html  fig2b.html  fig5a.html  fig5b.html  fig6a.html  fig6b.html  index.js
tests/: test_coord_sampler.py  test_models.py  test_pos_encoders.py
