[project]
name = "SIEDD"
version = "0.1.0"
description = "A fast coordinate based neural video encoder"
readme = "README.md"
authors = [
    { name = "Vikram Rangarajan", email = "vikram.rangaraja@gmail.com" },
    { name = "Shishira Maiya", email = "shishira@umd.edu" },
    { name = "Max Ehrlich", email = "maxehr@umd.edu" },
    { name = "Abhinav Shrivastava", email = "abhinav@cs.umd.edu" },
]
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.*",
    "torchac==0.9.*",
    "torchao==0.10.*",
    "torchvision==0.21.*",
    "numpy==2.2.*",
    "wandb[media]==0.19.*",
    "schedulefree==1.4.*",
    "decord==0.6.*",
    "tqdm==4.67.*",
    "scipy==1.14.*",
    "compress-pickle==2.1.*",
    "dahuffman==0.4.*",
    "peft==0.14.*",
    "hqq==0.2.*",
    "bitsandbytes==0.45.5",
    "optimum-quanto==0.2.*",
    "constriction==0.4.*",
    "matplotlib==3.9.*",
    "ruff>=0.11.5",
    "pydantic-yaml==1.4.*",
    "types-tqdm==4.67.*",
    "pyright[nodejs]>=1.1.399",
    "pytest==8.3.4",
    "opencv-python>=4.11.0.86",
    "grokadamw==0.1.2",
    "muon-optimizer",
    "notebook",
    "python-dotenv>=1.1.0",
    "b2>=4.3.2",
    "flip-evaluator>=1.6.0.1",
    "scienceplots>=2.1.1",
    "yt-dlp[default]>=2025.4.30",
    "vmaf-torch",
    "py7zr>=1.0.0",
]

[project.scripts]
train = "SIEDD.main:main"
exp = "SIEDD.exp:start"
runpod_exp = "SIEDD.runpod_exp:main"
quant_exp = "SIEDD.quant_exp:main"
quant_test = "SIEDD.quant_test:main"
superres = "SIEDD.superres:main"
extra_metrics = "SIEDD.extra_metrics:main"
multigpu = "SIEDD.multigpu:main"
denoising_baseline = "SIEDD.denoising_baseline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
vmaf-torch = { git = "https://github.com/alvitrioliks/VMAF-torch" }
